# auto-playlist

./: .env.example  .gitignore  README.md  pyproject.toml
auto-friend-playlist/: instagram.py  run.py  spotify.py
