[tool.poetry]
name = "auto-friend-playlist"
version = "0.1.0"
description = ""
authors = ["Connor (Cub) <connor@cubdigital.co.nz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
instagrapi = "^2.1.2"
pillow = "^10.4.0"
spotipy = "^2.24.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
